--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
 <!-- 🔹 상단 헤더 -->
 <header class="top-header">
   <div class="logo">
-    <a href="/">📖 책모아</a>
+    <a href="/">📖 TA TEST</a>
   </div>
   <div class="auth-buttons">
     <% if (!user) { %>
